k8s/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-web-app
  labels:
     app: go-web-app
spec:
  type: ClusterIP
  selector:
     app: go-web-app
  ports:
   - port: 80
     targetPort: 8080
     protocol: TCP
